--- a/templates/ajax/game/newspaper.html.twig
+++ b/templates/ajax/game/newspaper.html.twig
@@ -28,7 +28,11 @@
                                 </div>
                                 {% if gazette.death_inside|length == 0 %}
                                 	<div class="tooltip normal">
-                                        {{'Das wird aber nicht lange so bleiben...'|trans({}, 'game')}}
+                                        {% if gazette.reactorExplosion %}
+                                            {{'Immerhin wurden alle Bürger aus der Stadt geschleudert...'|trans({}, 'game')}}
+                                        {% else %}
+                                            {{'Das wird aber nicht lange so bleiben...'|trans({}, 'game')}}
+                                        {% endif %}
                                     </div>
                                     {{'Niemand!'|trans({}, 'game')}}
                                 {% else %}
