Improve CSS for the town menu

--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -69,8 +69,8 @@ div.town-banner {
       &>div:first-child { outline: 1px solid @myhordes-input-border; }
     }
     &.selected {
-      &:not(.town-overview)>div:first-child { background-color: #965C36 !important;outline: 1px solid white; }
-      &>div:last-child { background: #965C36; color: white; border: 1px solid #693e29; };
+      &:not(.town-overview)>div:first-child { background-color: #965C36 !important;outline: 1px solid black; border: 1px solid white; }
+      &>div:last-child { background: #965C36; color: white; };
     }
   }
   &:not(.night)>.town-menu-house>div:first-child { background: url("../../img/background/town/menu_home.gif") center/cover no-repeat }
