--- a/templates/ajax/game/beyond/beyond.html.twig
+++ b/templates/ajax/game/beyond/beyond.html.twig
@@ -73,7 +73,7 @@
                             } %}{% endembed %}
                             <div class="zone-info">
                                 <div class="row zone-cp note note-light">
-                                    <div class="cell rw-5 left"><img src="{{ asset('build/images/icons/small_human.gif') }}" alt="CP" /> <span>{% if zone.x != 0 or zone.y != 0 %}{{ zone_cp }} {% trans from 'game' %}Punkt(e){% endtrans %}{% else %}--{% endif %}</span></div>
+                                    <div class="cell rw-5 left"><img src="{{ asset('build/images/icons/small_human.gif') }}" alt="CP" /> <span>{% if zone.x != 0 or zone.y != 0 %}{% trans with {'{points}': zone_cp} from 'game' %}{points} Punkt(e){% endtrans %}{% else %}--{% endif %}</span></div>
                                     <div class="cell rw-2 center">
                                         {% if zone.x != 0 or zone.y != 0 %}
                                             {% if zone_cp < zone_zombies %}
