--- a/templates/scripts/map.js.twig
+++ b/templates/scripts/map.js.twig
@@ -220,6 +220,7 @@ for (let i = 0; i < scroll_areas.length; i++) {
 
         let map_button  = map_controls.querySelector('[x-control="map"]');
         let tags_button  = map_controls.querySelector('[x-control="tags"]');
+        let global_button  = map_controls.querySelector('[x-control="global"]');
         let zone_button = map_controls.querySelector('[x-control="zone"]');
         let route_button = map_controls.querySelector('[x-control="routes"]');
 
@@ -279,6 +280,20 @@ for (let i = 0; i < scroll_areas.length; i++) {
                     this.classList.remove('hide-tags');
                     this.classList.add('show-tags');
                     $.client.set('map', 'tags', 'show', true);
+                }
+            });
+        if (global_button) 
+            global_button.addEventListener('click', function() {
+                if(map_area.classList.contains('show-global')) {
+                    map_area.classList.remove('show-global');
+                    this.classList.remove('show-tags');
+                    this.classList.add('hide-tags');
+                    $.client.set('map', 'global', 'hide', true);
+                } else {
+                    map_area.classList.add('show-global');
+                    this.classList.remove('hide-tags');
+                    this.classList.add('show-tags');
+                    $.client.set('map', 'global', 'show', true);
                 }
             });
 
