--- a/assets/less/modules/map.less
+++ b/assets/less/modules/map.less
@@ -5,7 +5,9 @@
 @myhordes-map-footer: url(../../img/background/beyond/map_footer_toggle.png) top center no-repeat, url(../../img/background/beyond/map_footer_large.png) top left repeat-x;
 
 div.map_area {
+  position: relative;
   div.map {
+    z-index: 5;
     font-size: 0; background: @myhordes-map-background; overflow: hidden; padding-top: 100%; position: relative;
     //border: 1px solid @myhordes-smalltext;
     &:before,&:after {
@@ -383,6 +385,9 @@ div.map_area {
     }
   }
   div.controls {
+    position: relative;
+    bottom: 0px;
+    z-index: 10;
     background: @myhordes-map-footer;
     height: 16px;
     /*border-bottom-left-radius: 4px; border-bottom-right-radius: 4px;*/
@@ -392,19 +397,42 @@ div.map_area {
     &>div.zonemap_controls {display: none};
 
     &>div.tilemap_controls,&>div.zonemap_controls {
-      line-height: 0;
+      width: auto;
+      div {
+        div {
+          max-height: 16px;
+        }
+      }
       .map_button {
-        font-size: 0.7rem; padding: 1px 6px; margin-top: 1px; vertical-align: top;
-        &:first-child { margin-left: 2px; }
-        &:last-child { margin-right: 2px; }
+        margin-top: -5px; vertical-align: top;
+        padding: 2px;
+        height: 16px;
+        max-width: 51px;
+        overflow: visible;
+        font-size: 13px;
+        font-variant:normal;
+        font-weight: 700;
+        text-align: left;;
+        &.map_button_icon {
+          font-size: 10px;
+        }
+        div { 
+          transform: scale(0.7, 1.15);
+          margin-top: -4px; 
+          margin-left: -5px; 
+        }
+        &:first-child { margin-left: 2px; padding-left: 2px }
+        &:last-child { margin-right: 2px; padding-left: 1px }
+        &.map-icon { padding-left: 20px; background: url('../../img/icons/item_map.gif') 3px -2px no-repeat, url(../../img/background/bg_button.gif) center / cover no-repeat; }
         &.hide-tags { background: url('../../img/icons/tickOff.gif') 3px -2px no-repeat, url(../../img/background/bg_button.gif) center / cover no-repeat; }
         &.show-tags { background: url('../../img/icons/tickOn.gif') 3px -2px no-repeat, url(../../img/background/bg_button.gif) center / cover no-repeat; }
-        &.hide-tags,&.show-tags { padding-left: 16px; }
+        &.hide-tags,&.show-tags { padding-left: 14px; }
       }
     }
   }
 
   &.zone-viewer-mode {
+    z-index: 5;
     &>.map {
       &:before {opacity: 0.9; background: radial-gradient(circle, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.4) 30%, rgba(0,0,0,0.85) 70%, rgba(0,0,0,1.0) 100%);}
       &>.zone-plane, &>.zone-plane-controls { opacity: 1; }
@@ -415,6 +443,7 @@ div.map_area {
       &>.zone-plane-controls { transform: scale(1); .action-move { pointer-events: all } }
     }
     &>.controls {
+      z-index: 10;
       &>div.tilemap_controls {display: none};
       &>div.zonemap_controls {display: block;};
     }
