--- a/templates/scripts/map.js.twig
+++ b/templates/scripts/map.js.twig
@@ -286,13 +286,13 @@ for (let i = 0; i < scroll_areas.length; i++) {
             global_button.addEventListener('click', function() {
                 if(map_area.classList.contains('show-global')) {
                     map_area.classList.remove('show-global');
-                    this.classList.remove('show-tags');
-                    this.classList.add('hide-tags');
+                    this.classList.remove('hide-tags');
+                    this.classList.add('show-tags');
                     $.client.set('map', 'global', 'hide', true);
                 } else {
                     map_area.classList.add('show-global');
-                    this.classList.remove('hide-tags');
-                    this.classList.add('show-tags');
+                    this.classList.remove('show-tags');
+                    this.classList.add('hide-tags');
                     $.client.set('map', 'global', 'show', true);
                 }
             });
@@ -303,6 +303,15 @@ for (let i = 0; i < scroll_areas.length; i++) {
             if (tags_button) {
                 tags_button.classList.remove('hide-tags');
                 tags_button.classList.add('show-tags');
+            }
+        }
+
+        let show_global = $.client.get('map', 'global', 'hide');
+        if (show_global === 'show') {
+            map_area.classList.add('show-global');
+            if (global_button) {
+                global_button.classList.remove('hide-global');
+                global_button.classList.add('show-global');
             }
         }
     }
