--- a/assets/less/modules/map.less
+++ b/assets/less/modules/map.less
@@ -324,7 +324,7 @@ div.map_area {
     &.show-global {
       &>.scroll-plane {
         &>.zone {
-          &.global>div.icon { background-image: url("../../img/icons/map/map_zone_unknown.png"); background-repeat: no-repeat; background-position: center; }
+          &.global>div.icon, &.global.past>div.icon { background-image: url("../../img/icons/map/map_zone_unknown.png"); background-repeat: no-repeat; background-position: center; }
           &.town.devast>div.icon { background: url("../../img/icons/map/map_zone_town_devast.svg") center/contain no-repeat; }
           &.ruin:not(.buried)>div.icon { background: url("../../img/icons/map/map_zone_ruin.svg") center/contain no-repeat; }
           &.ruin:not(.buried).past>div.icon { background: url("../../img/icons/map/map_zone_ruin_past.svg") center/contain no-repeat; }
