--- a/templates/ajax/soul/visit.html.twig
+++ b/templates/ajax/soul/visit.html.twig
@@ -1,4 +1,5 @@
 {% extends "ajax/game/game.html.twig" %}
+{% block title %}{{ user.name }}{% endblock %}
 {% block ajax %}
     <div class="row soul">
         <div class="cell padded header rw-10 ro-1 rw-md-12 ro-md-0 edge-top-left">
