Small GUI enhancemenet

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -639,7 +639,7 @@ button, *.button, *.modal-button {
   text-align: left; cursor: pointer;
   font-variant: small-caps;
 
-  &:hover,&:focus { outline-color: @myhordes-button-color; color: lighten(@myhordes-button-color, 50%); }
+  &:hover,&:focus { border-color: @myhordes-button-color; color: lighten(@myhordes-button-color, 50%); }
   &:active { border-bottom-width: 1px; border-top-width: 2px; }
   &.inline { padding: 0 24px 0; }
   &:not(.inline) { display: block; width: 100%; }
