--- a/templates/scripts/errors/profile.txt.twig
+++ b/templates/scripts/errors/profile.txt.twig
@@ -21,6 +21,7 @@
 {{ constant('App\\Controller\\Soul\\SoulController::ErrorETwinImportServerCrash') }}:  '{{'Der Twinoid-Server meldet, dass er dein Profil aufgrund eines internen Fehlers nicht an MyHordes übertragen kann. Dieses Problem tritt häufig auf, wenn du in deinen Letzten Worten oder Stadtkommentaren Sonderzeichen verwendet hast. Bitte prüfe deine Stadtkommentare und entferne Sonderzeichen. Wenn sich Sonderzeichen in deinen Letzten Worten befinden, wende dich auf Twinoid an einen Raben.'|trans({},'soul')|e('js')}}',
 {{ constant('App\\Controller\\Soul\\SoulController::ErrorUserEditUserName') }}:  '{{'Du kannst deinen Spielernamen aktuell nicht ändern.'|trans({},'soul')|e('js')}}',
 {{ constant('App\\Controller\\Soul\\SoulController::ErrorUserEditTooSoon') }}:  '{{'Dafür ist es zu früh!'|trans({},'soul')|e('js')}}',
+{{ constant('App\\Controller\\Soul\\SoulController::ErrorUserUseEternalTwin') }}:  '{{'Bitte ändere deinen Anzeigenamen auf EternalTwin.'|trans({},'soul')|e('js')}}',
 
 {{ constant('App\\Controller\\Soul\\SoulController::ErrorCoalitionUserAlreadyMember') }}:  '{{'Es tut uns Leid, aber dieser Spieler gehört bereits einer Koalition an.'|trans({},'soul')|e('js')}}',
 {{ constant('App\\Controller\\Soul\\SoulController::ErrorCoalitionNotSet') }}:  '{{'Hierfür musst du einer Koalition angehören.'|trans({},'soul')|e('js')}}',
