--- a/templates/ajax/soul/settings.html.twig
+++ b/templates/ajax/soul/settings.html.twig
@@ -98,6 +98,24 @@
             <div class="row">
                 <div class="padded cell rw-3 rw-md-4 rw-sm-12">
                     <div class="note note-lightest">
+                        <label>
+                            {{ 'Bevorzugte Pronomen'|trans({}, 'global') }}
+                            <a class="help-button"><div class="tooltip help">{{ 'Hier kannst du festlegen, welche Personalpronomen das Spiel verwenden soll, wenn es sich auf dich bezieht (z.B. "männlich" für "er", "ihn", etc und "weiblich" für "sie", "ihr", etc).<br /><em>Diese Einstellung beeinflusst, wie dir und anderen Spielern bestimmte Texte angezeigt werden, wenn die Option "Neue Übersetzungen verwenden" aktiv ist.</em>.'|trans({},'global')|raw }}</div>{{ 'Hilfe'|trans({},'global') }}</a>
+                        </label>
+                    </div>
+                </div>
+                <div class="cell rw-9 rw-md-8 rw-sm-12">
+                    <div class="row-flex wrap">
+                        <div class="padded cell"><label class="small"><input {{ app.user.preferredPronoun == constant('App\\Entity\\User::PRONOUN_MALE') ? 'checked' : '' }} type="radio" name="user_pronoun" value="male" /> {{ 'Männlich'|trans({},'global') }}</label></div>
+                        <div class="padded cell"><label class="small"><input {{ app.user.preferredPronoun == constant('App\\Entity\\User::PRONOUN_FEMALE') ? 'checked' : '' }} type="radio" name="user_pronoun" value="female" /> {{ 'Weiblich'|trans({},'global') }}</label></div>
+                        <div class="padded cell"><label class="small"><input {{ app.user.preferredPronoun is null or app.user.preferredPronoun == constant('App\\Entity\\User::PRONOUN_NONE') ? 'checked' : '' }} type="radio" name="user_pronoun" value="none" /> {{ 'Keine Präferenz'|trans({},'global') }}</label></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="padded cell rw-3 rw-md-4 rw-sm-12">
+                    <div class="note note-lightest">
                         <label for="user_desc">{{ 'Deine Beschreibung'|trans({}, 'global') }}</label>
                     </div>
                 </div>
@@ -579,6 +597,8 @@
         $.html.addEventListenerAll('#save_profile_header', 'click', () => {
             const title = parseInt(document.getElementById('user_title').value);
             const icon = parseInt(document.getElementById('user_icon').value);
+            const pronounSel = document.querySelector('input[name="user_pronoun"]:checked');
+            const pronoun = pronounSel ? pronounSel.value : 'none';
 
             if (icon >= 0 && title < 0) {
                 $.html.error('{{ 'Du kannst kein Icon ohne einen Titel wählen.'|trans({},'soul')|e('js') }}');
@@ -588,7 +608,8 @@
             $.ajax.easySend('{{ path('api_soul_header')|e('js') }}', {
                 title: title,
                 icon: icon,
-                desc: $.html.twinoParser.parseToString(document.getElementById('user_desc').value, s => [null,s])
+                desc: $.html.twinoParser.parseToString(document.getElementById('user_desc').value, s => [null,s]),
+                pronoun: pronoun
             }, () => {
                 $.html.notice('{{ 'Deine Einstellung wurde gespeichert.'|trans({},'soul')|e('js') }}');
                 $.ajax.load(null, '{{ path('soul_settings')|e('js') }}');
