--- a/templates/ajax/game/newspaper.html.twig
+++ b/templates/ajax/game/newspaper.html.twig
@@ -152,7 +152,7 @@
             {% for citizenWithRole in citizensWithRole %}
                 {% for role in citizenWithRole.roles %}
                     {% if not role.secret and not role.hidden %}
-                        <p><img alt="•" src="{{ asset('build/images/icons/small_middot.gif') }}" />{{ "Der {rolename} der Stadt ist {username}"|trans({'{rolename}': "<strong>" ~ role.label|trans({}, 'game') ~ "</strong>", '{username}': "<strong>" ~ citizenWithRole.name ~ "</strong>"} , 'game')|raw }}</p>
+                        <p><img alt="•" src="{{ asset('build/images/icons/small_middot.gif') }}" />{{ "Der {rolename} der Stadt ist {username}"|trans({'rolename': role.label|trans({'ref': citizenWithRole}, 'game'), 'username': citizenWithRole, 'username__tag': 'strong', 'rolename__tag': 'strong'} , 'game')|raw }}</p>
                     {% endif %}
                 {% endfor %}
             {% endfor %}
