--- a/templates/ajax/game/town/well.html.twig
+++ b/templates/ajax/game/town/well.html.twig
@@ -115,8 +115,10 @@
             wellButtons[i].addEventListener('click', function() {
                 if (this.getAttribute('x-well-confirm') === '1') {
                     {% if not allow_take %}
-                        $.html.error('{{ 'Du kannst nicht <strong>mehr als 2 Rationen Wasser pro Tag</strong> entnehmen.'|trans({},'game')|e('js') }}');
-                        return;
+                        if (this.getAttribute('x-well-direction') === 'up') {
+                            $.html.error('{{ 'Du kannst nicht <strong>mehr als 2 Rationen Wasser pro Tag</strong> entnehmen.'|trans({},'game')|e('js') }}');
+                            return;
+                        }
                     {% else %}
                         if (!confirm('{{ 'Bestätigen?'|trans({},'global')|e('js') }}'))
                             return;
