--- a/templates/ajax/game/town/citizen.html.twig
+++ b/templates/ajax/game/town/citizen.html.twig
@@ -201,7 +201,7 @@
     </div>
     <div class="row prof-list">
         <div class="padded cell small center ro-4 rw-4 rw-md-4">
-            <img alt="" src="{{ asset('build/images/icons/small_human.gif') }}" /> <span class="citizen_count">{{ "@citizens Bürger"|trans({ '@citizens': citizens|length - death_count }, 'game') }} {% if death_count > 0 %}<em>(+ {{ '@deads Tot'|trans({'@deads': death_count},'game') }})</em>{% endif %}</span>
+            <img alt="" src="{{ asset('build/images/icons/small_human.gif') }}" /> <span class="citizen_count">{{ "{citizens} Bürger"|trans({ '{citizens}': citizens|length - death_count }, 'game') }} {% if death_count > 0 %}<em>(+ {{ '{deads} Tot'|trans({'{deads}': death_count},'game') }})</em>{% endif %}</span>
         </div>
     </div>
 
