Added blackboard placeholder (issue #1337)

--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -451,6 +451,12 @@ div.town-banner {
       outline: none;
       padding: 0;
     }
+    em {
+      display: inline-block;
+      font-size: 1.1rem;
+      color: @myhordes-button-color;
+      margin-top: 2rem;
+    }
   }
   .edit, .cancel {
     max-width: 240px;
