--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -355,6 +355,19 @@ div.town-banner {
     font-size: 1.2rem;
     background-color: #5c2b20;
   }
+  .prof {
+    background-color: #5c2b20;
+    padding-right: 0.5rem;
+    font-size: 1rem;
+    display: inline-block;
+    img {
+      vertical-align: sub;
+    }
+    em {
+      color: @myhordes-smalltext;
+      font-size: 1.2rem;
+    }
+  }
   .citizen_count {
     color: white;
     em {
